tests/fixtures/invalid/max_bytes_list.py
# Cannot call max() with Bytes, List[int]
x = max(b"hello", [1, 2, 3])
